--- a/src/App.css
+++ b/src/App.css
@@ -19,11 +19,24 @@ body{
 
 .upload-container {
   
-  background: mediumslateblue;
+ 
+  background: #5C258D;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #4389A2, #5C258D);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #4389A2, #5C258D); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  
   border-radius: 25px ;
   box-shadow: 0 20px 20px #0000002e;
  
 }
+
+
+.uploadcont {
+  background: #5f2c82;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #49a09d, #5f2c82);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #49a09d, #5f2c82); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+ 
+}
+
 
 .simpletext {
   color:"yellow";
@@ -32,14 +45,29 @@ body{
 .dropzone {
   border : 2px dashed var(--border-color) ;
   border-radius: 10px ;
+  transition: all .2s ease-in;
 }
 
-img{
+.droppzone {
+
+opacity: 0.8; /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  border : 2px dashed #fff44f ;
+}
+
+.image{
+  transition: ease-in 0.1s;
+ 
+}
+
+.iimmg{
   
-  transition: ease-in-out 0.5s;
+  transition: ease-in 0.5s;
+  transform: translateY(-15px)
 
 }
 
-img:hover {
-    transform: translateY(-10px);
+ 
+#browse-button {
+  color:#ffc500;
+  cursor: pointer;
 }
