--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 :root {
   --main-bg-color:  #282C35; 
   --border-color: #fff44f70; 
+  --container-width: 500px; 
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap');
@@ -19,14 +20,25 @@ body{
 
 .upload-container {
   
- 
+  display: flex;
+  padding: 0px 40px;
+  flex-direction: column;
+  justify-content: center;
   background: #5C258D;  /* fallback for old browsers */
   background: -webkit-linear-gradient(to right, #4389A2, #5C258D);  /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to right, #4389A2, #5C258D); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  
+  width: var(--container-width);
+  min-height: 200px;
   border-radius: 25px ;
   box-shadow: 0 20px 20px #0000002e;
  
+}
+
+.lower-cont {
+  display: flex ;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 
@@ -62,6 +74,7 @@ opacity: 0.8; /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7
 .iimmg{
   
   transition: ease-in 0.5s;
+  transform: scale(10px);
   transform: translateY(-15px)
 
 }
@@ -70,4 +83,53 @@ opacity: 0.8; /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7
 #browse-button {
   color:#ffc500;
   cursor: pointer;
+}
+
+.progress-container{
+  display:"block" ; 
+  align-items: center;
+  width: var(--container-width); 
+  background-color: #b3cdd1;
+  background-image: linear-gradient(315deg, #b3cdd1 0%, #9fa4c4 74%);
+  height: 40px; 
+  margin-bottom: 20px;
+  border-radius:5px;
+  
+}
+
+.progress-container .bg-progress { 
+  /* transform: scaleX(0.01);
+  transform-origin: left; */
+  background-color: #3bb78f;
+background-image: linear-gradient(315deg, #3bb78f 0%, #0bab64 74%);
+  height: 100%;
+  border-radius:5px; 
+}
+
+
+
+.logo {
+  position: absolute;
+  top: 5px;
+  left: 10px;
+  width: 120px;
+}
+
+.logo-title {
+  position: absolute;
+  top: 60px;
+  left: 15px;
+  color: white; 
+
+}
+
+.link {
+  background-image: linear-gradient(315deg, #fff000 0%, #ed008c 74%);
+  text-decoration: none;
+  background-color: #f3ec78;
+  background-size: 100%;
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  -webkit-text-fill-color: transparent; 
+  -moz-text-fill-color: transparent;  
 }
