--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@ body{
   padding:0; 
   align-items: center;
   justify-content: center;
-  margin:0 ; 
+  overflow: hidden;
 }
 
 .upload-container {
@@ -51,7 +51,7 @@ body{
 
 
 .simpletext {
-  color:"yellow";
+  color: white;
   font-family:"Poppins", sans-serif;
 }
 .dropzone {
@@ -63,10 +63,10 @@ body{
 .droppzone {
 
 opacity: 0.8; /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  border : 2px dashed #fff44f ;
+border : 2px dashed #fff44f ;
 }
 
-.image{
+.img{
   transition: ease-in 0.1s;
  
 }
@@ -132,4 +132,98 @@ background-image: linear-gradient(315deg, #3bb78f 0%, #0bab64 74%);
   -moz-background-clip: text;
   -webkit-text-fill-color: transparent; 
   -moz-text-fill-color: transparent;  
+}
+
+
+.sharing-container {
+  width: var(--container-width); 
+  display:flex; 
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin:0 ; 
+}
+
+.link-container {
+  border: 2px dashed var(--border-color);
+  width: var(--container-width);
+  align-items: center;
+  display:flex ;
+  border-radius: 5px ;
+  justify-content: center;
+  margin-bottom:10px;
+}
+#fileUrl {
+  width:100%; 
+  height:100%; 
+  background-color: transparent;
+  padding:15px; 
+  border:none;
+  outline:none; 
+  font-size: 17px;
+  color:white; 
+}
+
+.file-name {
+  background-color: #2a2a72;
+background-image: linear-gradient(315deg, #2a2a72 0%, #009ffd 74%);
+font-weight: bold;
+  color:'white' ; 
+  padding: 5px 10px ;
+  margin-left:10px; 
+  border-radius: 5px;
+}
+
+/* .upload-vector {
+  position: absolute ;
+  top:50; 
+  left:50;
+  bottom:50 ;
+  display:flex ;
+  justify-content: center;
+  
+  background:url("images/undraw_moon.png")   ; 
+
+} */
+
+
+@media screen and (max-width: 900px) {
+  :root {
+    --container-width:  320px ;
+  }
+  
+}
+
+@media screen and (max-width : 1550px) {
+  :root {
+    --container-width: 350px ;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  :root {
+    overflow-x: hidden;
+    --container-width:  220px ;
+  }
+
+  body {
+      margin: 20px ;
+  }
+  .upload-container {
+   min-height: 200px  ;
+  }
+
+  img {
+    height:50 ;
+    width: 60 ;
+  }
+  
+  .progress-container {
+    height: 20px; 
+  margin-bottom: 10px;
+  }
+
+  .lower-cont {
+    margin:0 ; 
+  }
 }
