--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
   --main-bg-color:  #282C35; 
   --border-color: #fff44f70; 
   --container-width: 500px; 
+
   
 }
 
@@ -17,12 +18,13 @@ body{
   padding:0; 
   align-items: center;
   justify-content: center;
+  
  
  
 }
 
 .upload-container {
-  
+  margin-top:200px ;
   display: flex;
   padding: 0px 40px;
   flex-direction: column;
@@ -214,6 +216,7 @@ font-weight: bold;
    
   }
   .upload-container {
+    margin:50px  ;
    min-height: 200px  ;
   }
 
